gen/datastore/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-datastore1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/datastore/v1/lib)
error[E0423]: expected value, found struct `indexes::IndexesActions`
    --> gen/datastore/v1/lib/src/lib.rs:2969:13
     |
2969 |             indexes::IndexesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `indexes::IndexesActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/datastore/v1/lib/src/lib.rs:2973:13
     |
2973 |             operations::OperationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-datastore1`.

To learn more, run the command again with --verbose.
